# LCMGO-Python-FastAPI-Webinar-03082025

./: alembic.ini  backend_flowchart.excalidraw  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 041e6be8c77e_first_commit.py
src/: config.py  database.py  main.py
src/models/: bookmark_model.py  user_model.py
src/routes/: auth_route.py  bookmark_route.py  home_route.py  redirect_route.py
src/schemas/: bookmark_schema.py  user_schema.py
src/utils/: helper.py
